--- a/debian/control
+++ b/debian/control
@@ -1,17 +1,15 @@
-Source: eduice-primary
+Source: edu-primary
 Section: misc
 Priority: optional
 Maintainer: MountainOS <mountainoslinux@gmail.com>
-Homepage: mountainlinuxos.wordpress.com/eduice
+Homepage: project-altitude.github.io
 Build-Depends: debhelper-compat (= 12)
 Standards-Version: 3.9.2
 Rules-Requires-Root: no
 
-Package: eduice-primary
+Package: edu-primary
 Architecture: all
 Depends: gnome-paint, tuxtype, tuxmath, kanagram
 Multi-Arch: foreign
-Description: EduIce tools primary
- This package installs primary education apps for MountainOS EduIce
- .
- second paragraph
+Description: MOS Edu tools primary
+ This package installs primary education apps for MountainOS Edu
